# aplicacoes-cg-projetos

./: .gitignore  CMakeLists.txt  README.md  SetPath.bat
Code snippets/: LoadSimpleOBJ.md
misc/: DeCasteljau.py  Interativo.py  PolinomiosBernstein.py  Template_README_Projeto.md  Template_README_Repositorio.md
misc/HelloTriangle - Godot/: HelloTriangle.gd  HelloTriangle.gd.uid  HelloTriangle.gdshader  HelloTriangle.gdshader.uid  HelloTriangle.tscn  icon.svg.import  project.godot
src/ExercicioOBJ/: ExercicioOBJ.cpp  README.md
src/ExercicioSkyBox/: Camera.cpp  ExercicioSkybox.cpp  README.md  README_Skybox.md
src/Hello3D/: Hello3D.cpp
src/HelloCamera/: InstrucoesImplementacao.md  main.cpp
src/HelloCubemap/: README.md  main.cpp
src/HelloCurves/: main.cpp
src/HelloOBJ/: main.cpp
src/HelloPhong/: Camera.h  main.cpp
src/TrabalhoGrauA/: Camera.cpp  Camera.h  LoadOBJ.h  Mesh.h  README.md  main.cpp
